--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,15 @@ h1 {
   line-height: 1.1;
 }
 
+/* Probably remove me */
 #app {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+#gameBoard {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
