--- a/src/style.css
+++ b/src/style.css
@@ -35,14 +35,6 @@ h1 {
   line-height: 1.1;
 }
 
-#gameBoard {
-  width: 900px;
-  margin-left: auto;
-  margin-right: auto;
-  height: 900px;
-  border: solid 5px black;
-}
-
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -75,34 +67,22 @@ button:focus-visible {
   }
 }
 
-.gameSquare {
-  float: left;
-  width: 296px;
-  height: 296px;
-  border: solid 2px black;
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.gameSquare:hover {
-  background-color: black;
-}
-
-.symbolContainer {
-  width: 200px;
-  height: 200px;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.gameBoardContainer {
+#gameBoard {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   width: 900px;
   margin-left: auto;
   margin-right: auto;
   height: 900px;
   border: solid 5px black;
+}
+
+.gameSquare {
+  flex-basis: calc(33.333% - 10px);
+  margin: 5px;
+  height: 296px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
