add gamePiece div to a divclass and add it to styles
as well as decrease the size of images.

--- a/src/style.css
+++ b/src/style.css
@@ -85,3 +85,9 @@ button:focus-visible {
   justify-content: center;
   align-items: center;
 }
+
+.gamePiece {
+  width: auto;
+  height: auto;
+  display: inline-block;
+}
