--- a/src/style.css
+++ b/src/style.css
@@ -77,7 +77,7 @@ button:focus-visible {
   border: solid 5px black;
 }
 
-.gameSquare {
+#gameSquare {
   flex-basis: calc(33.333% - 10px);
   margin: 3px;
   background-color: white;
@@ -86,7 +86,7 @@ button:focus-visible {
   align-items: center;
 }
 
-.gamePiece {
+#gamePiece {
   width: auto;
   height: auto;
   display: inline-block;
