replace images with divs-that-looks-like-images

--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,18 @@ button:focus-visible {
   align-items: center;
 }
 
-#gamePiece {
-  width: auto; 
-  height: auto;
+#gamePiece-X {
+  position: relative;
+  height: 100px;
+  width: 100px;
+  background-color: black;
+}
+
+#gamePiece-O {
+  position: relative;
+  height: 100px;
+  width: 100px;
+  background-color: blue;
+  border-radius: 50%;
+
 }
