--- a/src/style.css
+++ b/src/style.css
@@ -90,7 +90,7 @@ button:focus-visible {
   position: relative;
   height: 20px;
   width: 100px;
-  background-color: black;
+  background-color: #242424;
   transform: rotate(-45deg);
 }
 
@@ -98,7 +98,7 @@ button:focus-visible {
   position: absolute;
   height: 20px;
   width: 100px;
-  background-color: black;
+  background-color: #242424;
   transform: rotate(45deg);
 }
 
@@ -106,6 +106,6 @@ button:focus-visible {
   position: absolute;
   height: 100px;
   width: 100px;
-  background-color: black;
+  background-color: #242424;
   border-radius: 50%;
 }
